# ckanext-api-plantilla

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/api_plantilla/: cli.py  helpers.py  plugin.py  views.py
ckanext/api_plantilla/assets/: script.js  webassets.yml
ckanext/api_plantilla/logic/: action.py  auth.py  schema.py  validators.py
ckanext/api_plantilla/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/api_plantilla/tests/logic/: test_action.py  test_auth.py  test_validators.py
