[metadata]
name = ckanext-api-plantilla
version = 0.0.1
description = prueba
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gosmithb/ckanext-api-plantilla
author = bryan
author_email = bryangodinez@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN prueba

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             api_plantilla = ckanext.api_plantilla.plugin:ApiPlantillaPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/api_plantilla/i18n/ckanext-api_plantilla.pot
width = 80

[init_catalog]
domain = ckanext-api_plantilla
input_file = ckanext/api_plantilla/i18n/ckanext-api_plantilla.pot
output_dir = ckanext/api_plantilla/i18n

[update_catalog]
domain = ckanext-api_plantilla
input_file = ckanext/api_plantilla/i18n/ckanext-api_plantilla.pot
output_dir = ckanext/api_plantilla/i18n
previous = true

[compile_catalog]
domain = ckanext-api_plantilla
directory = ckanext/api_plantilla/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
